<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityController.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterWeightText">

        <ToggleButton
            android:id="@+id/marsButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="marsButtonClicked"
            android:text="@string/mars_c"
            android:textAllCaps="false"
            android:textOff="@string/marsa"
            android:textOn="@string/mars_b" />

        <ToggleButton
            android:id="@+id/jupiterButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:onClick="jupiterButtonClicked"
            android:text="@string/jupiter_c"
            android:textAllCaps="false"
            android:textOff="@string/jupiter_a"
            android:textOn="@string/jupiter_b" />

        <ToggleButton
            android:id="@+id/saturnButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saturnButtonClicked"
            android:text="@string/saturn_c"
            android:textAllCaps="false"
            android:textOff="@string/saturn_a"
            android:textOn="@string/saturn_b" />
    </LinearLayout>

    <EditText
        android:id="@+id/enterWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:hint="@string/enter_your_weight"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/showWeightButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="showWeightButtonClicked"
        android:text="@string/show_weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>